[package]
name = "gurkle-cli"
description = "The CLI for gurkle"
version = "0.1.0"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Tom Houlé <tom@tomhoule.com>",
]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/gurkle"
edition = "2018"

[[bin]]
name = "gurkle"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.10", features = ["json", "blocking"] }
gurkle = { version = "0.1.0", path = "../client", features = [] }
gurkle_codegen = { path = "../codegen", version = "0.1.0" }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "1.0"
log = "0.4"
env_logger = "0.6"

[features]
default = []

