[package]
name = "gurkle-cli"
description = "The CLI for gurkle"
version = "0.2.1"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Tom Houlé <tom@tomhoule.com>",
]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/technocreatives/gurkle"
edition = "2018"

[[bin]]
name = "gurkle"
path = "src/main.rs"

[dependencies]
anyhow = "1"
gurkle = { version = "0.2.0", path = "../client" }
gurkle_codegen = { version = "0.2.0", path = "../codegen" }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
syn = "1"
log = "0.4"
env_logger = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
tokio = { version = "1", features = ["io-util", "sync", "macros"], default-features = false }
