[package]
name = "gurkle"
version = "0.1.0"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Tom Houlé <tom@tomhoule.com>",
]
description = "GraphQL client for Rust, with typed requests and responses, and subscriptions!"
repository = "https://github.com/bbqsrc/gurkle"
license = "Apache-2.0 OR MIT"
keywords = ["graphql", "api", "web"]
categories = ["network-programming", "web-programming"]
edition = "2018"

[dependencies]
doc-comment = "0.3"
anyhow = { version = "1", optional = true }
thiserror = { version = "1" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.log]
version = "0.4"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["Headers", "Request", "RequestInit", "Response", "Window"]

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dev-dependencies]
# Note: If we bumpup wasm-bindge-test version, we should change CI setting.
wasm-bindgen-test = "^0.3"

[features]
default = []
web = [
    "anyhow",
    "js-sys",
    "log",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys",
]
