[package]
name = "gurkle"
version = "0.1.0"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Tom Houlé <tom@tomhoule.com>",
]
description = "GraphQL client for Rust, with typed requests and responses, and subscriptions!"
repository = "https://github.com/bbqsrc/gurkle"
license = "Apache-2.0 OR MIT"
keywords = ["graphql", "api", "web"]
categories = ["network-programming", "web-programming"]
edition = "2018"

[dependencies]
thiserror = { version = "1" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }

[features]
default = []
