[package]
name = "gurkle"
version = "0.2.1"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Tom Houlé <tom@tomhoule.com>",
]
description = "GraphQL client for Rust, with typed requests and responses, and subscriptions!"
repository = "https://github.com/technocreatives/gurkle"
license = "Apache-2.0 OR MIT"
keywords = ["graphql", "api", "web"]
categories = ["network-programming", "web-programming"]
edition = "2018"

[dependencies]
thiserror = { version = "1" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
tokio-tungstenite = { version = "0.14", features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "sync"], default-features = false }
futures-util = { version = "0.3" }
tracing = "0.1.25"
async-stream = "0.3.0"
async-trait = "0.1.48"
futures = "0.3.13"

[features]
default = []
