[package]
name = "gurkle_codegen"
version = "0.1.1"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Tom Houlé <tom@tomhoule.com>",
]
description = "Utility crate for gurkle"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/gurkle"
edition = "2018"

[dependencies]
graphql-parser = "0.2"
heck = "0.3"
proc-macro2 = { version = "1", features = [] }
quote = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
syn = "1"
thiserror = "1"
