[package]
name = "gurkle-parser"
version = "0.2.1"
description = "A parser, AST and serializer for GraphQL schemas and query language."
license = "MIT OR Apache-2.0"
keywords = ["graphql", "parser"]
categories = ["parser-implementations", "command-line-interface"]
homepage = "https://github.com/bbqsrc/gurkle"
documentation = "https://docs.rs/gurkle-parser"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Paul Colomiets <paul@colomiets.name>"
]
edition = "2018"

[dependencies]
combine = "3.2.0"
thiserror = "1.0.11"

[dev-dependencies]
pretty_assertions = "0.5.0"
